data/derived/comb/progs/unify/prog0852.ml.out
Characters 147-151:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type string -> 'a
       but an expression was expected of type 'b list
